--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -141,4 +141,7 @@
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list> 
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
 </web-app>
