--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
         <servlet-class>Controlador.Usuario</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>CategoriaC</servlet-name>
+        <servlet-class>Controlador.CategoriaC</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>EmpresaC</servlet-name>
         <servlet-class>Controlador.EmpresaC</servlet-class>
     </servlet>
@@ -71,6 +75,10 @@
     <servlet-mapping>
         <servlet-name>Usuario</servlet-name>
         <url-pattern>/Usuario</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CategoriaC</servlet-name>
+        <url-pattern>/CategoriaC</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>EmpresaC</servlet-name>
