--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,10 @@
         <servlet-class>Controlador.CategoriaC</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>MensajesReporte</servlet-name>
+        <servlet-class>Controlador.MensajesReporte</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>EmpresaC</servlet-name>
         <servlet-class>Controlador.EmpresaC</servlet-class>
     </servlet>
@@ -79,6 +83,10 @@
     <servlet-mapping>
         <servlet-name>CategoriaC</servlet-name>
         <url-pattern>/CategoriaC</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MensajesReporte</servlet-name>
+        <url-pattern>/MensajesReporte</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>EmpresaC</servlet-name>
